REFACT: Refactoring error handling